Edited css file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <link html="resources/css/style.css" type="text/css" rel="stylesheet">
     <title>Broadway Design</title>
   </head>
+
   <body>
+    <div class=Header>
     <h1 id="home">Broadway Design</h1>
     <nav>
       <a href="#Home">Home</a>
@@ -13,6 +15,7 @@
       <a href="#Team">Team</a>
       <a href="#Contact">Contact</a>
     </nav>
+  </div>
 
 <!-- Process -->
 
@@ -26,7 +29,9 @@
       <img src="resources/images/execute.svg" alt="execute icon">
       <h3>Execute</h3>
         <p>We put everything we have into our work.</p>
+
 <!-- Information -->
+
     <h3 class="NY">Designed in New York</h3>
     <h3 id="Work">Portfolio</h3>
       <p>Coming Soon</p>
@@ -34,7 +39,9 @@
       <p>We're Hiring!</p>
     <h3 id="Contact">Contact</h3>
       <p>Phone: (555) 555-5555 <br> E-mail: test@example.com <br> Twitter: @test</p>
+
 <!-- Footer -->
+
     <p class="footer"> &copy; Broadway 2016
     <a href="#Home">Home</a>
     <a href="#About">About</a>
