--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link html="resources/css/style.css" type="text/css" rel="stylesheet">
+    <link html="./resources/css/style.css" type="text/css" rel="stylesheet">
     <title>Broadway Design</title>
   </head>
 
   <body>
-    <div class=Header>
-    <h1 id="home">Broadway Design</h1>
+    <div class="Hero" id="#">
+    <h1>Broadway Design</h1>
     <nav>
-      <a href="#Home">Home</a>
-      <a href="#About">About</a>
-      <a href="#Work">Work</a>
-      <a href="#Team">Team</a>
-      <a href="#Contact">Contact</a>
+      <p><a href="#">Home</a></p>
+      <p><a href="#About">About</a></p>
+      <p><a href="#Work">Work</a></p>
+      <p><a href="#Team">Team</a></p>
+      <p><a href="#Contact">Contact</a></p>
     </nav>
   </div>
 
 <!-- Process -->
-
+  <div class="supporting">
     <h2 id="about">Our Process</h2>
       <img src="resources/images/identify.svg" alt="Identify icon">
       <h3>Identify</h3>
@@ -29,17 +29,22 @@
       <img src="resources/images/execute.svg" alt="execute icon">
       <h3>Execute</h3>
         <p>We put everything we have into our work.</p>
+  </div>
 
 <!-- Information -->
 
-    <h3 class="NY">Designed in New York</h3>
-    <h3 id="Work">Portfolio</h3>
-      <p>Coming Soon</p>
-    <h3 id="Team">Team</h3>
-      <p>We're Hiring!</p>
-    <h3 id="Contact">Contact</h3>
-      <p>Phone: (555) 555-5555 <br> E-mail: test@example.com <br> Twitter: @test</p>
+  <div class="hero">
+      <h3>Designed in New York</h3>
+  </div>
 
+  <div class="supporting">
+      <h3 id="Work">Portfolio</h3>
+        <p>Coming Soon</p>
+      <h3 id="Team">Team</h3>
+        <p>We're Hiring!</p>
+      <h3 id="Contact">Contact</h3>
+        <p>Phone: (555) 555-5555 <br> E-mail: test@example.com <br> Twitter: @test</p>
+  </div>
 <!-- Footer -->
 
     <p class="footer"> &copy; Broadway 2016
