Correct with Solutions - Second attempt - does not link to stylesheet

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
-    <link html="./resources/css/style.css" type="text/css" rel="stylesheet">
+    <link html="resources/css/style.css" type="text/css" rel="stylesheet">
     <title>Broadway Design</title>
   </head>
 
@@ -15,7 +15,7 @@
       <p><a href="#Team">Team</a></p>
       <p><a href="#Contact">Contact</a></p>
     </nav>
-  </div>
+    </div>
 
 <!-- Process -->
   <div class="supporting">
@@ -43,17 +43,21 @@
       <h3 id="Team">Team</h3>
         <p>We're Hiring!</p>
       <h3 id="Contact">Contact</h3>
-        <p>Phone: (555) 555-5555 <br> E-mail: test@example.com <br> Twitter: @test</p>
+        <p>Phone: (555) 555-5555</p>
+        <p>E-mail: test@example.com</p>
+        <p>Twitter: @test</p>
   </div>
 <!-- Footer -->
 
-    <p class="footer"> &copy; Broadway 2016
-    <a href="#Home">Home</a>
+<div class="footer">
+  <p> &copy; Broadway 2016
+    <a href="#">Home</a>
     <a href="#About">About</a>
     <a href="#Work">Work</a>
     <a href="#Team">Team</a>
     <a href="#Contact">Contact</a>
   </p>
+</div>
 
   </body>
 </html>
