--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link html="resources/css/style.css" type="text/css" rel="stylesheet">
+    <link html="./resources/css/style.css" type="text/css" rel="stylesheet">
     <title>Broadway Design</title>
   </head>
 
