--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <div class="Hero" id="#">
+    <div class="hero" id="#">
     <h1>Broadway Design</h1>
     <nav>
       <p><a href="#">Home</a></p>
